--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "es-parfumerie-backend",
-  "version": "1.0.0",
-  "description": "API et panel admin pour ES Parfumerie",
+  "version": "2.0.0",
+  "description": "API et panel admin pour ES Parfumerie - Site de parfumerie avec gestion des produits",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"No build step required for Node.js\"",
+    "setup": "npm install && node -e \"console.log('✅ Dependencies installed')\"",
+    "keep-alive": "node keep-alive.js",
+    "prod": "NODE_ENV=production node server.js",
+    "debug": "NODE_ENV=development nodemon server.js --inspect"
+  },
+  "keywords": [
+    "parfumerie",
+    "ecommerce",
+    "admin-panel",
+    "api",
+    "express",
+    "sqlite"
+  ],
+  "author": "ES Parfumerie",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/emmanuelselicour/ES-Parfumerie.git"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,12 +39,41 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
-    "ejs": "^3.1.9"
-  }
-}
-{
-  "scripts": {
-    "start": "node server.js & node keep-alive.js",
-    "dev": "nodemon server.js"
-  }
+    "ejs": "^3.1.9",
+    "session-file-store": "^1.5.0",
+    "fs-extra": "^11.2.0",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "eslint": "^8.44.0"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.32.6"
+  },
+  "files": [
+    "server.js",
+    "database.js",
+    "routes/",
+    "middleware/",
+    "views/",
+    "uploads/",
+    "sessions/",
+    "public/"
+  ],
+  "directories": {
+    "test": "tests"
+  },
+  "config": {
+    "port": 3000,
+    "session_secret": "change_this_in_production",
+    "upload_limit": "10mb"
+  },
+  "bugs": {
+    "url": "https://github.com/emmanuelselicour/ES-Parfumerie/issues"
+  },
+  "homepage": "https://es-parfumerie-api.onrender.com",
+  "private": true
 }
